logs/dag_id=COVID-19/run_id=manual__2023-11-22T192907.263785+0000/task_id=execute_sql_script/attempt=5.log
[2023-11-22T21:43:10.016+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: COVID-19.execute_sql_script manual__2023-11-22T19:29:07.263785+00:00 [queued]>
[2023-11-22T21:43:10.028+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: COVID-19.execute_sql_script manual__2023-11-22T19:29:07.263785+00:00 [queued]>
[2023-11-22T21:43:10.029+0000] {taskinstance.py:1361} INFO - Starting attempt 5 of 5
[2023-11-22T21:43:10.047+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): execute_sql_script> on 2023-11-22 19:29:07.263785+00:00
[2023-11-22T21:43:10.055+0000] {standard_task_runner.py:57} INFO - Started process 792 to run task
[2023-11-22T21:43:10.058+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'COVID-19', 'execute_sql_script', 'manual__2023-11-22T19:29:07.263785+00:00', '--job-id', '55', '--raw', '--subdir', 'DAGS_FOLDER/dag_etl.py', '--cfg-path', '/tmp/tmpcjnrvbcd']
[2023-11-22T21:43:10.061+0000] {standard_task_runner.py:85} INFO - Job 55: Subtask execute_sql_script
[2023-11-22T21:43:10.117+0000] {task_command.py:416} INFO - Running <TaskInstance: COVID-19.execute_sql_script manual__2023-11-22T19:29:07.263785+00:00 [running]> on host 6c2240d4b080
[2023-11-22T21:43:10.392+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='COVID-19' AIRFLOW_CTX_TASK_ID='execute_sql_script' AIRFLOW_CTX_EXECUTION_DATE='2023-11-22T19:29:07.263785+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-22T19:29:07.263785+00:00'
[2023-11-22T21:43:10.394+0000] {sql.py:274} INFO - Executing: -- Table des dimensions
CREATE TABLE IF NOT EXISTS Departement (
    num_departement INT NOT NULL,
    nom_departement VARCHAR(255) NOT NULL,
    nom_region VARCHAR(255) NOT NULL,
    PRIMARY KEY (num_departement)
);

CREATE TABLE IF NOT EXISTS Passage (
    id_passage INT NOT NULL,
    nombre_passage_corona INT,
    nombre_passage_total INT,
    nombre_passage_corona_h INT,
    nombre_passage_corona_f INT,
    nombre_passage_total_h INT,
    nombre_passage_total_f INT,
    PRIMARY KEY (id_passage)
);

CREATE TABLE IF NOT EXISTS Hospitalisation (
    id_hospitalisation INT NOT NULL,
    nombre_hospitalisation_corona INT,
    nombre_hospitalisation_corona_h INT,
    nombre_hospitalisation_corona_f INT,
    PRIMARY KEY (id_hospitalisation)
);

CREATE TABLE IF NOT EXISTS Age (
    id_age INT NOT NULL,
    tranche_age VARCHAR(255) NOT NULL,
    PRIMARY KEY (id_age)
);

-- Table des faits
CREATE TABLE IF NOT EXISTS Urgence_covid (
    -- id_urgence_covid INT NOT NULL,
    -- id_hospitalisation INT FOREIGN KEY REFERENCES Hospitalisation(id_hospitalisation),
    -- id_passage INT FOREIGN KEY REFERENCES Passage(id_passage),
    -- id_age INT FOREIGN KEY REFERENCES Age(id_age),
    -- num_departement INT FOREIGN KEY REFERENCES Departement(num_departement),
    -- PRIMARY KEY (id_urgence_covid)
    id_urgence_covid INT NOT NULL,
    id_hospitalisation INT,
    id_passage INT,
    id_age INT,
    num_departement INT,
    PRIMARY KEY (id_urgence_covid),
    FOREIGN KEY (id_hospitalisation) REFERENCES Hospitalisation(id_hospitalisation),
    FOREIGN KEY (id_passage) REFERENCES Passage(id_passage),
    FOREIGN KEY (id_age) REFERENCES Age(id_age),
    FOREIGN KEY (num_departement) REFERENCES Departement(num_departement)
);

-- INSERT INTO Age VALUES (0, "tous âges");
-- INSERT INTO Age VALUES (1, "0-4 ans");
-- INSERT INTO Age VALUES (2, "5-14 ans");
-- INSERT INTO Age VALUES (3, "15-44 ans");
-- INSERT INTO Age VALUES (4, "45-64 ans");
-- INSERT INTO Age VALUES (5, "65-74 ans");
-- INSERT INTO Age VALUES (6, "75 ans et plus");

INSERT INTO Age VALUES (0, 'tous âges') ON CONFLICT (0) DO NOTHING;
INSERT INTO Age VALUES (1, '0-4 ans') ON CONFLICT (1) DO NOTHING;
INSERT INTO Age VALUES (2, '5-14 ans') ON CONFLICT (2) DO NOTHING;
INSERT INTO Age VALUES (3, '15-44 ans') ON CONFLICT (3) DO NOTHING;
INSERT INTO Age VALUES (4, '45-64 ans') ON CONFLICT (4) DO NOTHING;
INSERT INTO Age VALUES (5, '65-74 ans') ON CONFLICT (5) DO NOTHING;
INSERT INTO Age VALUES (6, '75 ans et plus') ON CONFLICT (6) DO NOTHING;
[2023-11-22T21:43:10.404+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-22T21:43:10.418+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-22T21:43:10.434+0000] {sql.py:418} INFO - Running statement: -- Table des dimensions
CREATE TABLE IF NOT EXISTS Departement (
    num_departement INT NOT NULL,
    nom_departement VARCHAR(255) NOT NULL,
    nom_region VARCHAR(255) NOT NULL,
    PRIMARY KEY (num_departement)
);

CREATE TABLE IF NOT EXISTS Passage (
    id_passage INT NOT NULL,
    nombre_passage_corona INT,
    nombre_passage_total INT,
    nombre_passage_corona_h INT,
    nombre_passage_corona_f INT,
    nombre_passage_total_h INT,
    nombre_passage_total_f INT,
    PRIMARY KEY (id_passage)
);

CREATE TABLE IF NOT EXISTS Hospitalisation (
    id_hospitalisation INT NOT NULL,
    nombre_hospitalisation_corona INT,
    nombre_hospitalisation_corona_h INT,
    nombre_hospitalisation_corona_f INT,
    PRIMARY KEY (id_hospitalisation)
);

CREATE TABLE IF NOT EXISTS Age (
    id_age INT NOT NULL,
    tranche_age VARCHAR(255) NOT NULL,
    PRIMARY KEY (id_age)
);

-- Table des faits
CREATE TABLE IF NOT EXISTS Urgence_covid (
    -- id_urgence_covid INT NOT NULL,
    -- id_hospitalisation INT FOREIGN KEY REFERENCES Hospitalisation(id_hospitalisation),
    -- id_passage INT FOREIGN KEY REFERENCES Passage(id_passage),
    -- id_age INT FOREIGN KEY REFERENCES Age(id_age),
    -- num_departement INT FOREIGN KEY REFERENCES Departement(num_departement),
    -- PRIMARY KEY (id_urgence_covid)
    id_urgence_covid INT NOT NULL,
    id_hospitalisation INT,
    id_passage INT,
    id_age INT,
    num_departement INT,
    PRIMARY KEY (id_urgence_covid),
    FOREIGN KEY (id_hospitalisation) REFERENCES Hospitalisation(id_hospitalisation),
    FOREIGN KEY (id_passage) REFERENCES Passage(id_passage),
    FOREIGN KEY (id_age) REFERENCES Age(id_age),
    FOREIGN KEY (num_departement) REFERENCES Departement(num_departement)
);

-- INSERT INTO Age VALUES (0, "tous âges");
-- INSERT INTO Age VALUES (1, "0-4 ans");
-- INSERT INTO Age VALUES (2, "5-14 ans");
-- INSERT INTO Age VALUES (3, "15-44 ans");
-- INSERT INTO Age VALUES (4, "45-64 ans");
-- INSERT INTO Age VALUES (5, "65-74 ans");
-- INSERT INTO Age VALUES (6, "75 ans et plus");

INSERT INTO Age VALUES (0, 'tous âges') ON CONFLICT (0) DO NOTHING;
INSERT INTO Age VALUES (1, '0-4 ans') ON CONFLICT (1) DO NOTHING;
INSERT INTO Age VALUES (2, '5-14 ans') ON CONFLICT (2) DO NOTHING;
INSERT INTO Age VALUES (3, '15-44 ans') ON CONFLICT (3) DO NOTHING;
INSERT INTO Age VALUES (4, '45-64 ans') ON CONFLICT (4) DO NOTHING;
INSERT INTO Age VALUES (5, '65-74 ans') ON CONFLICT (5) DO NOTHING;
INSERT INTO Age VALUES (6, '75 ans et plus') ON CONFLICT (6) DO NOTHING;, parameters: None
[2023-11-22T21:43:10.442+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "0"
LINE 62: ...ERT INTO Age VALUES (0, 'tous âges') ON CONFLICT (0) DO NOTH...
                                                              ^

[2023-11-22T21:43:10.459+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=COVID-19, task_id=execute_sql_script, execution_date=20231122T192907, start_date=20231122T214310, end_date=20231122T214310
[2023-11-22T21:43:10.478+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 55 for task execute_sql_script (syntax error at or near "0"
LINE 62: ...ERT INTO Age VALUES (0, 'tous âges') ON CONFLICT (0) DO NOTH...
                                                              ^
; 792)
[2023-11-22T21:43:10.513+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-22T21:43:10.535+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
